<resources>
    <string name="app_name">ZiamThai</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="facebook_app_id">306345773047501</string>
    <string name="title_activity_maps">Map</string>

    <string name="login_with_email">Login With Email</string>
    <string name="title_activity_maps2">Map</string>

    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirmpassword">Confirmpassword</string>

    <string name="Home">Home</string>
    <string name="Point">Point</string>
    <string name="Friend">Friend</string>
    <string name="Setting">Setting</string>

    <string name="Recommend">Recommend</string>
    <string name="Review">Review</string>
    <string name="Deal">Deal</string>
    <string name="Knowledge">Knowledge</string>

    <string name="SearchRestaurant">Search Restaurant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
