<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.revenue_express.ziamthai.fragment.SettingFragment">
    <!--<Button-->
        <!--android:id="@+id/btnLogin"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/Login"-->
        <!--android:layout_marginBottom="16dp"/>-->
    <!--<Button-->
        <!--android:id="@+id/btnRegister"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->

        <!--android:text="@string/Register"-->
        <!--android:layout_marginBottom="16dp"/>-->
    <!--<Button-->
        <!--android:id="@+id/btnPoint"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->

        <!--android:text="@string/Point"-->
        <!--android:layout_marginBottom="16dp"/>-->
    <!--<Button-->
        <!--android:id="@+id/btnFriend"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->

        <!--android:text="@string/Friend"-->
        <!--android:layout_marginBottom="16dp"/>-->
    <FrameLayout
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Login"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/back"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/back">
    </FrameLayout>
    <FrameLayout
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Register"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/back"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/back">
    </FrameLayout>
    <FrameLayout
        android:id="@+id/btnPoint"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Point"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/back"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/back">
    </FrameLayout>
    <FrameLayout
        android:id="@+id/btnFriend"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Friend"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/back"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/back">
    </FrameLayout>

</LinearLayout>
