<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottombar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/btnHome"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:listSelector="@drawable/button_selector">

            <TextView
                android:background="@color/back"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/photo2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/Home"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnPoint"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:listSelector="@drawable/button_selector">

            <TextView
                android:background="@color/back"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/photo1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/Point"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnFriend"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:listSelector="@drawable/button_selector">

            <TextView
                android:background="@color/back"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/photo3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/Friend"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnSetting"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:listSelector="@drawable/button_selector">

            <TextView
                android:background="@color/back"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/photo4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/Setting"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>